:memo: :Get jwt token generate godoc and Create Seller godoc
