# src/internal/infra/webServer/handlers/seller_handler.go
@@ -13,6 +13,10 @@ import (
 	"github.com/go-chi/jwtauth"
 )
 
+type Error struct {
+	Message string `json:"message"`
+}
+
 type SellerHandler struct {
 	SellerDB usecases.SellerDBInterface
 }
@@ -23,6 +27,16 @@ func NewSellerHandler(db usecases.SellerDBInterface) *SellerHandler {
 	}
 }
 
+// Get jwt token generate godoc
+// @Sumary Generate token jwt
+// @Description Generate token jwt
+// @Tags seller
+// @Accept json
+// @Produce json
+// @Param request body dto.GetJwtInput true "seller request"
+// @Success 200 {object} dto.GetJwtOutput
+// @Failure 500 {object} Error
+// @Router /seller/signin [post]
 func (h *SellerHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 	var seller dto.GetJwtInput
 	jwt := r.Context().Value("jwt").(*jwtauth.JWTAuth)
@@ -30,18 +44,21 @@ func (h *SellerHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 	err := json.NewDecoder(r.Body).Decode(&seller)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode("bad Request")
+		error := Error{Message: "bad Request"}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	s, err := h.SellerDB.FindByEmail(seller.Email)
 	if err != nil {
 		w.WriteHeader(http.StatusNotFound)
-		json.NewEncoder(w).Encode("seller not found")
+		error := Error{Message: "seller not found"}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	if !s.ValidatePassword(seller.Password) {
 		w.WriteHeader(http.StatusUnauthorized)
-		json.NewEncoder(w).Encode("credentials invalid")
+		error := Error{Message: "credentials invalid"}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	_, tokenString, err := jwt.Encode(map[string]interface{}{
@@ -50,37 +67,47 @@ func (h *SellerHandler) GetJWT(w http.ResponseWriter, r *http.Request) {
 	})
 	if err != nil {
 		w.WriteHeader(http.StatusBadGateway)
-		json.NewEncoder(w).Encode(err.Error())
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
-	accessToken := struct {
-		AccessToken string `json:"access_token"`
-	}{
-		AccessToken: tokenString,
-	}
+	accessToken := dto.GetJwtOutput{AccessToken: tokenString}
 	w.Header().Set("content-type", "application/json")
 	w.WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode(accessToken)
 }
 
+// Create Seller godoc
+// @Sumary Create new seller
+// @Description Create a new seller
+// @Tags seller
+// @Accept json
+// @Produce json
+// @Param request body dto.CreateSellerInput true "seller request"
+// @Success 201 "seller created"
+// @Failure 500 {object} Error
+// @Router /seller [post]
 func (h *SellerHandler) CreateSeller(w http.ResponseWriter, r *http.Request) {
 	var seller dto.CreateSellerInput
 	err := json.NewDecoder(r.Body).Decode(&seller)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode(err.Error())
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	s, err := entity.NewSeller(seller.Name, seller.Email, seller.Document, seller.Password, seller.Phone)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode(err.Error())
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	err = h.SellerDB.Create(s)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
-		json.NewEncoder(w).Encode(err.Error())
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	w.WriteHeader(http.StatusCreated)
@@ -91,12 +118,14 @@ func (h *SellerHandler) GetSeller(w http.ResponseWriter, r *http.Request) {
 	email := chi.URLParam(r, "email")
 	if email == "" {
 		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode("email not provided")
+		error := Error{Message: "email not provided"}
+		json.NewEncoder(w).Encode(error)
 	}
 	seller, err := h.SellerDB.FindByEmail(email)
 	if err != nil {
 		w.WriteHeader(http.StatusNotFound)
-		json.NewEncoder(w).Encode(err.Error())
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 		return
 	}
 	w.Header().Set("content-type", "application/json")
@@ -108,23 +137,27 @@ func (h *SellerHandler) UpdateSeller(w http.ResponseWriter, r *http.Request) {
 	email := chi.URLParam(r, "email")
 	if email == "" {
 		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode("email not provided")
+		error := Error{Message: "email not provided"}
+		json.NewEncoder(w).Encode(error)
 	}
 	var seller entity.Seller
 	err := json.NewDecoder(r.Body).Decode(&seller)
 	if err != nil {
 		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode(err.Error())
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 	}
 	_, err = h.SellerDB.FindByEmail(email)
 	if err != nil {
 		w.WriteHeader(http.StatusNotFound)
-		json.NewEncoder(w).Encode("seller not found")
+		error := Error{Message: "seller not found"}
+		json.NewEncoder(w).Encode(error)
 	}
 	err = h.SellerDB.Update(&seller)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
-		json.NewEncoder(w).Encode(err.Error())
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 	}
 	w.WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode("seller updated")
@@ -134,17 +167,20 @@ func (h *SellerHandler) DeleteSeller(w http.ResponseWriter, r *http.Request) {
 	document := chi.URLParam(r, "document")
 	if document == "" {
 		w.WriteHeader(http.StatusBadRequest)
-		json.NewEncoder(w).Encode("document not provided")
+		error := Error{Message: "document not provided"}
+		json.NewEncoder(w).Encode(error)
 	}
 	seller, err := h.SellerDB.FindByDocument(document)
 	if err != nil {
 		w.WriteHeader(http.StatusNotFound)
-		json.NewEncoder(w).Encode("seller not found")
+		error := Error{Message: "seller not found"}
+		json.NewEncoder(w).Encode(error)
 	}
 	err = h.SellerDB.Delete(seller.ID.String())
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
-		json.NewEncoder(w).Encode(err.Error())
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 	}
 	w.WriteHeader(http.StatusOK)
 	json.NewEncoder(w).Encode("seller deleted")
@@ -165,7 +201,8 @@ func (h *SellerHandler) GetSellers(w http.ResponseWriter, r *http.Request) {
 	sellers, err := h.SellerDB.FindAll(pageInt, limitInt, sort)
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
-		json.NewEncoder(w).Encode("Internal server error")
+		error := Error{Message: err.Error()}
+		json.NewEncoder(w).Encode(error)
 	}
 	w.Header().Set("content-type", "application/json")
 	w.WriteHeader(http.StatusOK)
